💄 style: rounded-lg

--- a/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DateFilterDialog.razor
@@ -3,7 +3,7 @@
 
 <MultiSimpleDialog Value="Value"
                    ValueChanged="InternalValueChanged">
-    <MCard Class="rounded-t-lg rounded-b-sm-lg">
+    <MCard Class="rounded-t-lg">
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Filter.Filter"))
             <MSpacer></MSpacer>
