--- a/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/DeleteDialog.razor
@@ -3,8 +3,9 @@
 
 <MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
+          ContentClass="rounded-lg"
           MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @Title
         </MCardTitle>
