--- a/SwashbucklerDiary/Components/DialogComponents/ErrorDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/ErrorDialog.razor
@@ -2,9 +2,10 @@
 @namespace SwashbucklerDiary.Components
 
 <MDialog Value="true"
+         ContentClass="rounded-lg"
          Persistent="true"
          MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             <MIcon Class="error--text mr-2">
                 mdi-close-circle-outline
