--- a/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/PasswordDialog.razor
@@ -1,16 +1,17 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits FocusDialogComponentBase
 
-<MMDialog MyValue="Value"
+<MMDialog @ref="myDialog"
+          MyValue="Value"
           MyValueChanged="InternalValueChanged"
-          MaxWidth="480"
-          @ref="myDialog">
+          ContentClass="rounded-lg"
+          MaxWidth="480">
     <MForm @ref="@form"
            Model="@model"
            OnValidSubmit="HandleOnOK"
            EnableValidation="true"
            EnableI18n="true">
-        <MCard Rounded="@("lg")">
+        <MCard>
             <MCardTitle Class="font-weight-bold">
                 @(Title)
                 <MSpacer></MSpacer>
@@ -22,7 +23,7 @@
             </MCardTitle>
             <MCardText Class="pb-0">
                 <MTextField @bind-Value="model.Password"
-                            @ref="TextField"
+                @ref="TextField"
                             Dense="true"
                             HideDetails="@("auto")"
                             Outlined="true"
