--- a/SwashbucklerDiary/Components/DialogComponents/SelectIconDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectIconDialog.razor
@@ -3,10 +3,11 @@
 
 <MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
+          ContentClass="rounded-lg"
           MaxWidth="420"
           Scrollable="true"
           Transition="@(null)">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(Title)
             <MSpacer></MSpacer>
