--- a/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectLocation.razor
@@ -4,9 +4,10 @@
 <MMDialog @ref="myDialog"
           MyValue="Value"
           MyValueChanged="InternalValueChanged"
+          ContentClass="rounded-lg"
           MaxWidth="420"
           Scrollable>
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Location.Select"))
             <MSpacer></MSpacer>
