--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiMenu.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiMenu.razor
@@ -4,7 +4,8 @@
 <MultiDisplay>
     <MobileContent>
         <MMBottomSheet MyValue="Value"
-                       MyValueChanged="ValueChanged">
+                       MyValueChanged="ValueChanged"
+                       ContentClass="rounded-t-lg">
             <ActivatorContent>
                 <MButton Icon="true"
                 @attributes="@context.Attrs">
