--- a/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyDatePicker.razor
@@ -3,6 +3,7 @@
 
 <MMDialog MyValue="Value"
           MyValueChanged="ValueChanged"
+          ContentClass="rounded-lg"
           MaxWidth="420">
     <MDatePicker @bind-Value="InternalDate"
                  Class="rounded-lg pt-4 my-picker"
