--- a/SwashbucklerDiary/Pages/Mine/Export/LocalExport.razor
+++ b/SwashbucklerDiary/Pages/Mine/Export/LocalExport.razor
@@ -50,30 +50,32 @@
               Diaries="Diaries">
 </ExportDialog>
 
-<MMDialog @bind-MyValue="ShowImport" MaxWidth="420">
-    <MCard Rounded="@("lg")">
+<MMDialog @bind-MyValue="ShowImport"
+          ContentClass="rounded-lg"
+          MaxWidth="420">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Export.Import.ConfirmImport.Title"))
             <MSpacer></MSpacer>
             <MButton Icon
-                     OnClick="@(()=>ShowImport=false)">
-                <MIcon>mdi-close</MIcon>
-            </MButton>
-        </MCardTitle>
-        <MCardText Class="pb-0">
-            @(I18n.T("Export.Import.ConfirmImport.Content"))
-        </MCardText>
-        <MCardActions>
-            <MSpacer></MSpacer>
-            <MButton Text
-                     OnClick="()=>ShowImport=false">
-                @(I18n.T("Share.Cancel"))
-            </MButton>
-            <MButton Text
-                     Color="primary"
-                     OnClick="ConfirmImport">
-                @(I18n.T("Share.OK"))
-            </MButton>
-        </MCardActions>
-    </MCard>
-</MMDialog>
+                      OnClick="@(()=>ShowImport=false)">
+                 <MIcon>mdi-close</MIcon>
+             </MButton>
+         </MCardTitle>
+         <MCardText Class="pb-0">
+             @(I18n.T("Export.Import.ConfirmImport.Content"))
+         </MCardText>
+         <MCardActions>
+             <MSpacer></MSpacer>
+             <MButton Text
+                      OnClick="()=>ShowImport=false">
+                 @(I18n.T("Share.Cancel"))
+             </MButton>
+             <MButton Text
+                      Color="primary"
+                      OnClick="ConfirmImport">
+                 @(I18n.T("Share.OK"))
+             </MButton>
+         </MCardActions>
+     </MCard>
+ </MMDialog>
