--- a/SwashbucklerDiary/Components/DialogComponents/LANTransferDialog.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/LANTransferDialog.razor
@@ -3,9 +3,10 @@
 
 <MDialog Value="Value"
          ValueChanged="InternalValueChanged"
+         ContentClass="rounded-lg"
          Persistent="true"
          MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @Title
             <MSpacer></MSpacer>
