--- a/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
+++ b/SwashbucklerDiary/Components/DialogComponents/SelectTags.razor
@@ -3,9 +3,10 @@
 
 <MMDialog MyValue="Value"
           MyValueChanged="InternalValueChanged"
+          ContentClass="rounded-lg"
           MaxWidth="420"
           Scrollable="true">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Tag.Select"))
             <MSpacer></MSpacer>
