--- a/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
+++ b/SwashbucklerDiary/Pages/Mine/Backups/WebDAVBackups.razor
@@ -104,8 +104,9 @@
 </WebDavConfigDialog>
 
 <MMDialog @bind-MyValue="ShowUpload"
+          ContentClass="rounded-lg"
           MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Backups.Upload.Title"))
             <MSpacer></MSpacer>
@@ -133,9 +134,10 @@
 </MMDialog>
 
 <MMDialog @bind-MyValue="ShowDownload"
+          ContentClass="rounded-lg"
           MaxWidth="420"
           Scrollable="true">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Backups.Download.Title"))
             <MSpacer></MSpacer>
