--- a/SwashbucklerDiary/Pages/MinePage.razor
+++ b/SwashbucklerDiary/Pages/MinePage.razor
@@ -134,8 +134,9 @@
 </ScrollContainer>
 
 <MMDialog @bind-MyValue="ShowLanguage"
+          ContentClass="rounded-lg"
           MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Mine.SelectLanguage"))
             <MSpacer></MSpacer>
@@ -166,8 +167,9 @@
 </MMDialog>
 
 <MMDialog @bind-MyValue="ShowThemeState"
+          ContentClass="rounded-lg"
           MaxWidth="420">
-    <MCard Rounded="@("lg")">
+    <MCard>
         <MCardTitle Class="font-weight-bold">
             @(I18n.T("Mine.Night"))
             <MSpacer></MSpacer>
