--- a/SwashbucklerDiary/_Imports.razor
+++ b/SwashbucklerDiary/_Imports.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using Masa.Blazor
+@using Masa.Blazor.Presets
 @using BlazorComponent
 @using SwashbucklerDiary
 @using SwashbucklerDiary.Shared
