🐛 fix(MyMarkdown): Occasional toolbar display error

--- a/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyMarkdown.razor
@@ -1,12 +1,15 @@
 ﻿@namespace SwashbucklerDiary.Components
 
 <div class="@WrapClass">
-    <MMarkdown @ref="MMarkdown"
-               Value="@Value"
-               ValueChanged="ValueChanged"
-               Class="@Class"
-               Style="padding-top:10px"
-               Options="_options"
-               OnToolbarButtonClick="HandleToolbarButtonClick">
-    </MMarkdown>
+    @if (Show)
+    {
+        <MMarkdown @ref="MMarkdown"
+                   Value="@Value"
+                   ValueChanged="ValueChanged"
+                   Class="@Class"
+                   Style="padding-top:10px"
+                   Options="_options"
+                   OnToolbarButtonClick="HandleToolbarButtonClick">
+        </MMarkdown>
+    }
 </div>
