💄 style: update style

--- a/SwashbucklerDiary/Pages/WritePage.razor
+++ b/SwashbucklerDiary/Pages/WritePage.razor
@@ -48,8 +48,8 @@
     </ChildContent>
 </MAppBar>
 
-<ScrollContainer Class="d-flex"
-                 ContentClass="d-flex flex-column flex-grow-1">
+<ScrollContainer ContentClass="d-flex flex-column"
+                 ContentStyle="height:100%;">
     <div>
         <div class="px-3 px-sm-1 d-flex align-end">
             @if (EnableEditCreateTime)
