🐛 fix(MultiMenu): Menu not chlosed during page size switching

--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDatePicker.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDatePicker.razor
@@ -1,7 +1,7 @@
 ﻿@namespace SwashbucklerDiary.Components
 @inherits DialogComponentBase
 
-<MultiDisplay>
+<MultiDisplay OnUpdate="UpdateDisplay">
     <MobileContent>
         <PPMobileDatePicker MyVisible="Value"
                             MyVisibleChanged="ValueChanged"
