--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDisplay.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDisplay.razor
@@ -1,6 +1,6 @@
 ﻿@namespace SwashbucklerDiary.Components
 
-@if (Tablet ? MasaBlazor.Breakpoint.MdAndUp: MasaBlazor.Breakpoint.SmAndUp)
+@if (Show)
 {
     @DesktopContent
 }
