🐛 fix(MarkdownPreview): not set options

--- a/SwashbucklerDiary/Components/MyComponents/MarkdownPreview/MarkdownPreview.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MarkdownPreview/MarkdownPreview.razor
@@ -4,6 +4,7 @@
 {
     <MarkdownPreviewContent Value="@Value"
                             Class="@Class"
-                            Style="@Style">
+                            Style="@Style"
+                            Options="_options">
     </MarkdownPreviewContent>
 }
