--- a/SwashbucklerDiary/Components/MyComponents/MyFloatButton.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MyFloatButton.razor
@@ -2,11 +2,11 @@
 
 <FabTransition>
     <MButton Class="my-btn-fab elevation-2"
-             Bottom
-             Right
-             Fixed
-             OnClick="OnClick"
-             Fab>
+             Bottom="true"
+             Right="true"
+             Fixed="true"
+             Fab="true"
+             OnClick="OnClick">
         <MIcon>
             @Icon
         </MIcon>
