🐛 fix(MultiDialog): back button Invalid

--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiDialog.razor
@@ -40,8 +40,8 @@
         </MMBottomSheet>
     </MobileContent>
     <DesktopContent>
-        <MMDialog Value="Value"
-                  ValueChanged="ValueChanged"
+        <MMDialog MyValue="Value"
+                  MyValueChanged="ValueChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
             <MCard>
