--- a/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiSimpleDialog.razor
+++ b/SwashbucklerDiary/Components/MyComponents/MultiDisplay/MultiSimpleDialog.razor
@@ -10,8 +10,8 @@
         </MMBottomSheet>
     </MobileContent>
     <DesktopContent>
-        <MMDialog Value="Value"
-                  ValueChanged="ValueChanged"
+        <MMDialog MyValue="Value"
+                  MyValueChanged="ValueChanged"
                   ContentClass="rounded-lg"
                   MaxWidth="420">
             @ChildContent
